Fix invisible text
Note: This turns text previously intended to be _white_
into actually invisible text. There may be side-effects
but none are known at the moment.

--- a/userstyle.css
+++ b/userstyle.css
@@ -273,6 +273,14 @@ background: #191919 !important;
 
 }
 
+/* ---Ensures that text meant to be invisible, stays invisible-- */
+
+	span[style*="color:white"]{
+		color: rgba(0,0,0,0) !important;
+	}
+
+/* --- */
+
 }
 
 /* ---Timer widget fix------------------------------------------ */
